@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.12 2007-02-18 06:29:48 karl Exp $
+$Id: ChangeLog,v 1.13 2007-02-27 06:49:29 karl Exp $
+
+2007-02-27 karl
+    * Made getfsstat actually work.
 
 2007-02-18 karl
     * Add getfsstat that will return filesystem statistics for all mounted
